modificación visual botones

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="col-4"><p id="titulo"> TRANS-LAB</p></div>
-      <div class="col-4"></div>
+      <!-- <div class="col-4"></div> -->
       
     </div>
     
