añadido evento click, no funciona validación password

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="form-group">
               <input type="password" class="form-control login" id="exampleInputPassword1" placeholder="Password">
             </div>
-              <button id="btn-submit" type="submit" class="btn btn-primary login">INICIAR SESIÓN</button>
+              <button id="btn-inicio" type="button" class="btn btn-primary login">INICIAR SESIÓN</button>
           </form>
 
           
